# diary

./: README.md  pyproject.toml
plugin/: today.vim
src/today/: __init__.py  cli.py  config.py  kv.py  kv_cli.py
