[project]
name = "today"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
cli = ["timefhuman"]

[project.scripts]
today = "today.cli:main"
week = "today.cli:week"
month = "today.cli:month"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
